MonetDB5/src/mal/Tests/tst002.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2004, CWI. All rights reserved.
# compiled for 32biti686-pc-linux-gnu/32bit.
# config:/ufs/mk/monet5/src/mal/Tests/tst.conf
# dbfarm:/ufs/mk/monet5/Linux/var/MonetDB/dbfarm
# dbname:demo
# Visit http://monetdb.cwi.nl for further information.
## reserved names may not be used as target variables
#	true:= 23;
#	false:= 24;
#barrier barrier:= true;
#	b:= true;
#	b:= false;
#exit barrier;
#
!ERROR: 'true' is a reserved identifier
!ERROR: 'false' is a reserved identifier
!ERROR: 'barrier' is a reserved identifier
function Admin.main():int;	# 0  unknown (main:int)
    true := 23;	# 1  unknown (true:any)<-($2:int)
    false := 24;	# 2  unknown (false:any)<-($4:int)
barrier barrier := true;	# 3  unknown (barrier:any)<-($6:bit)
    b := true;	# 4  unknown (b:any)<-($6:bit)
    b := false;	# 5  unknown (b:any)<-($8:bit)
exit barrier;	# 6  unknown (barrier:any)
end main;	# 7  unknown 
>